fix(design): .card css & scrollbar css

--- a/src/assets/Style/Products/Grid.less
+++ b/src/assets/Style/Products/Grid.less
@@ -1,185 +1,108 @@
 @import "../../../index";
 
-.category {
-  overflow-y: hidden;
-  overflow-x: auto;
-  transition: max-height 0.2s linear;
-}
+.product-page {
 
-.collapsed-category {
-  overflow-x: hidden;
-}
+  .category {
+    overflow-y: hidden;
+    overflow-x: auto;
+    transition: max-height 0.2s linear;
+  }
 
-.category-title {
-  height: 20%;
-  font-size: large;
-  font-weight: bold;
-  font-family: Montserrat, serif;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-}
+  .collapsed-category {
+    overflow-x: hidden;
+  }
 
-.category-title-icon {
-  transition: all 0.2s ease-in;
-  opacity: 0;
-  margin-left: 15px;
-}
-
-.category-title-icon-isHover {
-  opacity: 1;
-}
-
-.category-icon {
-  transition: color linear 0.3s;
-  margin-right: 5px;
-}
-
-.category-icon:hover {
-  transform: scale(1.2);
-}
-
-.parent-list {
-  max-height: 190px;
-  transition: max-height 0.6s cubic-bezier(0, 0.29, 0.21, 0.97);
-}
-
-.empty-list {
-  height: 125px;
-  margin: 1% 10px 1% 10px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.card-list {
-  display: flex;
-}
-
-.collapsed-list {
-  max-height: 0;
-}
-
-.card {
-  width: 200px;
-  min-width: 200px;
-  height: 125px;
-  margin: 1% 10px 1% 10px;
-
-  background-color: #BBBBBB;
-  color: #FFFFFF;
-  filter: brightness(100%);
-  border-radius: @border-radius-base;
-
-  position: relative;
-
-  font-family: Montserrat, serif;
-
-  .card-title {
-    font-size: x-large;
-    font-weight: bold;
-    height: 45%;
-    max-height: 45%;
-    line-height: normal;
-  };
-
-  .card-information {
+  .category-title {
+    height: 20%;
     font-size: large;
-    font-weight: normal;
-    height: 25%;
+    font-weight: bold;
+    font-family: Montserrat, serif;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
   }
 
-  .card-item {
-    margin: 0 0 0 10%;
-    //text-overflow: ellipsis;
-    overflow: hidden;
-    //white-space: nowrap;
+  .category-title-icon {
+    transition: all 0.2s ease-in;
+    opacity: 0;
+    margin-left: 15px;
   }
-}
 
-.card-background {
-  border-radius: 10px;
-  position: absolute;
-  left: 0;
-  top: 0;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  filter: brightness(0.6);
-  background-size: cover;
-}
+  .category-title-icon-isHover {
+    opacity: 1;
+  }
 
-// design Maxime
+  .category-icon {
+    transition: color linear 0.3s;
+    margin-right: 5px;
+  }
 
-.category-title-icon {
-  transition: all 0.2s ease-in;
-  opacity: 0;
-  margin-left: 15px;
-}
+  .category-icon:hover {
+    transform: scale(1.2);
+  }
 
-.category-title-icon-isHover {
-  opacity: 1;
-}
+  .parent-list {
+    max-height: 190px;
+    transition: max-height 0.6s cubic-bezier(0, 0.29, 0.21, 0.97);
+  }
 
-.category-icon {
-  transition: color linear 0.3s;
-  margin-right: 5px;
-}
+  .empty-list {
+    height: 125px;
+    margin: 1% 10px 1% 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
 
-.category-icon:hover {
-  transform: scale(1.2);
-}
+  .card-list {
+    display: flex;
+  }
 
-.parent-list {
-  max-height: 190px;
-  transition: max-height 0.6s cubic-bezier(0, 0.29, 0.21, 0.97);
-}
+  .collapsed-list {
+    max-height: 0;
+  }
 
-.empty-list {
-  height: 125px;
-  margin: 1% 10px 1% 10px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
+  .card {
+    width: 200px;
+    min-width: 200px;
+    height: 125px;
+    margin: 1% 10px 1% 10px;
 
-.card-list {
-  display: flex;
-}
+    background-color: #BBBBBB;
+    color: #FFFFFF;
+    filter: brightness(100%);
+    border-radius: @border-radius-base;
 
-.collapsed-list {
-  max-height: 0;
-}
+    position: relative;
 
-.product-card {
-  width: 200px;
-  min-width: 200px;
-  max-width: 200px;
-  display: flex;
-  flex: 1;
-  height: 125px;
-  flex-wrap: wrap;
-  padding: @padding-xs;
-  margin: @padding-sm;
-  background-color: #bbbbbb;
-  color: #ffffff;
-  filter: brightness(100%);
-  border-radius: @border-radius-base;
-  position: relative;
-  font-family: Montserrat, serif;
+    font-family: Montserrat, serif;
 
-  .card-foreground {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    .card-title {
+      font-size: x-large;
+      font-weight: bold;
+      height: 45%;
+      max-height: 45%;
+      line-height: normal;
+    }
+  ;
+
+    .card-information {
+      font-size: large;
+      font-weight: normal;
+      height: 25%;
+    }
+
+    .card-item {
+      margin: 0 0 0 10%;
+      //text-overflow: ellipsis;
+      overflow: hidden;
+      //white-space: nowrap;
+    }
   }
 
   .card-background {
-    border-radius: @border-radius-base;
+    border-radius: 10px;
     position: absolute;
     left: 0;
     top: 0;
@@ -188,55 +111,101 @@
     height: 100%;
     filter: brightness(0.6);
     background-size: cover;
-    background-position: center;
   }
-  .card-title {
+
+  .product-card {
+    width: 200px;
+    min-width: 200px;
+    max-width: 200px;
     display: flex;
-    align-items: center;
-    justify-content: flex-start;
+    flex: 1;
+    height: 125px;
     flex-wrap: wrap;
-    font-weight: bold;
-    font-size: @heading-4-size;
-    line-height: 1.3em;
-    height: 50%;
-    max-height: 50%;
-    width: 100%;
-    max-width: 100%;
-    color: #fff;
-    div {
-      overflow: hidden;
-      word-break: break-all;
+    padding: @padding-xs;
+    margin: @padding-sm;
+    background-color: #bbbbbb;
+    color: #ffffff;
+    filter: brightness(100%);
+    border-radius: @border-radius-base;
+    position: relative;
+    font-family: Montserrat, serif;
+
+    .card-foreground {
+      display: none;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
       height: 100%;
-      overflow-wrap: break-word;
+    }
+
+    .card-background {
+      border-radius: @border-radius-base;
+      position: absolute;
+      left: 0;
+      top: 0;
+      z-index: -1;
+      width: 100%;
+      height: 100%;
+      filter: brightness(0.6);
+      background-size: cover;
+      background-position: center;
+    }
+
+    .card-title {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      flex-wrap: wrap;
+      font-weight: bold;
+      font-size: @heading-4-size;
+      line-height: 1.3em;
+      height: 50%;
+      max-height: 50%;
+      width: 100%;
+      max-width: 100%;
+      color: #fff;
+
+      div {
+        overflow: hidden;
+        word-break: break-all;
+        height: 100%;
+        overflow-wrap: break-word;
+      }
+    }
+
+    .card-information {
+      font-size: @font-size-lg;
+      font-weight: normal;
+      height: 25%;
+    }
+
+    .card-information.price {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .card-item {
+      margin: 0;
+      width: 100%;
     }
   }
-  .card-information {
-    font-size: @font-size-lg;
-    font-weight: normal;
-    height: 25%;
-  }
-  .card-information.price {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .card-item {
-    margin: 0;
-    width: 100%;
-  }
-}
-.product-card:hover {
-  .card-foreground {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 1;
-    background-color: rgba(0, 0, 0, 0.3);
-    span {
-      color: white;
-      font-size: @heading-2-size;
-      cursor: pointer;
-      z-index: 2;
+
+  .product-card:hover {
+    .card-foreground {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 1;
+      background-color: rgba(0, 0, 0, 0.3);
+
+      span {
+        color: white;
+        font-size: @heading-2-size;
+        cursor: pointer;
+        z-index: 2;
+      }
     }
   }
 }
