--- a/src/assets/Style/Products/ProductsPage.less
+++ b/src/assets/Style/Products/ProductsPage.less
@@ -15,13 +15,10 @@
     display: flex;
     justify-content: space-between;
 
-    .product-button {
+    .products-button {
+      width: 35%;
       display: flex;
-      .button {
-      margin: 0 @padding-md 0 0;
-      background-color: rgba(0, 0, 0, 0);
-      background-color: rgba(0,0,0,0);
-      }
+      justify-content: space-between;
     }
 
     .product-layout {
@@ -41,22 +38,4 @@
     overflow-x: auto;
     height: calc(100% - 40px);
   }
-
-  .board::-webkit-scrollbar-track
-  {
-    border-radius: 10px;
-    background-color: rgba(0, 0, 0, 0.04);
-  }
-
-  .board::-webkit-scrollbar
-  {
-    height: 10px;
-    background-color: rgba(0, 0, 0, 0.04);
-  }
-
-  .board::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    background-color: rgba(0, 0, 0, 0.06);
-  }
-
 }
