--- a/src/assets/body.less
+++ b/src/assets/body.less
@@ -1,3 +1,25 @@
 body {
   margin: 0;
 }
+
+::-webkit-scrollbar-track
+{
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.04);
+}
+
+::-webkit-scrollbar
+{
+  height: 10px;
+  width: 10px;
+  background-color: rgba(0, 0, 0, 0.04);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.06);
+}
+
+::-webkit-scrollbar-corner {
+  border-radius: 10px;
+}
